--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,24 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: pg
+  adapter: postgresql
   database: industrial_website_development
   pool: 5
+  username: mahsa
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: pg
+  adapter: postgresql
   database: industrial_website_test
   pool: 5
-  timeout: 5000
+  username: mahsa
+  timeout: 5000  
 
 production:
-  adapter: pg
+  adapter: postgresql
   database: industrial_website
   pool: 5
   timeout: 5000
