--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: mysql2
-  database: industrial_website_development
+  database: rasha_site_development
   pool: 5
   username: root
   timeout: 5000
@@ -15,13 +15,13 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql2
-  database: industrial_website_test
+  database: rasha_site_test
   pool: 5
   username: root
   timeout: 5000  
 
 production:
   adapter: postgresql
-  database: industrial_website
+  database: rasha_site
   pool: 5
   timeout: 1000
